--- a/css/inspiral-theme.css
+++ b/css/inspiral-theme.css
@@ -5586,4 +5586,9 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 
 .ui-accordion { padding: 0; }
 
-.bg-secondary, .bg-primary { background-color: unset !important; }
+.bg-secondary, .bg-primary { background-color: unset !important; padding: 0; }
+
+#header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.2); }
+#header img { width: 10rem; }
+#header .bg-primary ul a { color: #F59300; padding: 3rem !important; font-size: 1.9rem; }
+#header .bg-primary ul a:hover { background: #BDBDBD; color: #ffffff !important; }
