--- a/scss/custom-variables.scss
+++ b/scss/custom-variables.scss
@@ -68,9 +68,9 @@ $footer-bg:						$a-link-color;
 $footer-link-color:				rgba(225,225,225,0.3);
 
 //* Lingua Myanmar Color Variable 
-$primary-color:                              #F59300;
+$primary-color:                              #000000;
 $secondary-color:                            #554236;
-$nav-hover-top-color:                        #D68607;
+$nav-hover-color:                            #e5191e;
 $color-footer-bg:                            #393939;
 $color-footer-p:                             #BDBDBD;
 $color-white:                                #ffffff;
