--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5587,8 +5587,17 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .ui-accordion { padding: 0; }
 
 .navbar { padding: 0; }
-.navbar-collapse ul a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; }
-.navbar-collapse ul a:hover { border-bottom: 2px solid #e5191e; }
+.navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; }
+.navbar-collapse ul li.nav-item a:hover { border-bottom: 2px solid #e5191e; }
 
 #header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; background: #000000; }
 #header img { width: 10rem; }
+
+.featured-bottom { background: #000000; }
+.featured-bottom .region { max-width: 1170px; margin: 0 auto; display: block; }
+.featured-bottom .field { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 4rem 0; }
+
+.contact-us { position: relative; }
+.contact-us p { color: #ffffff; }
+.contact-us a { color: #e5191e; }
+.contact-us::after { content: ""; width: 2px; height: 15rem; background: red; position: absolute; right: -15rem; top: 2.5rem; }
