--- a/scss/custom-variables.scss
+++ b/scss/custom-variables.scss
@@ -69,8 +69,8 @@ $footer-link-color:				rgba(225,225,225,0.3);
 
 //* Lingua Myanmar Color Variable 
 $primary-color:                              #000000;
-$secondary-color:                            #554236;
-$nav-hover-color:                            #e5191e;
+$secondary-color:                            #e5191e;
+$nav-hover-color:                             $secondary-color;
 $color-footer-bg:                            #393939;
 $color-footer-p:                             #BDBDBD;
 $color-white:                                #ffffff;
