--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5590,7 +5590,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; }
 .navbar-collapse ul li.nav-item a:hover { border-bottom: 2px solid #e5191e; }
 
-#header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; background: #000000; }
+#header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; background: #000000; padding: 2px 0; }
 #header img { width: 10rem; }
 
 .featured-bottom { background: #000000; }
@@ -5601,3 +5601,8 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .contact-us p { color: #ffffff; }
 .contact-us a { color: #e5191e; }
 .contact-us::after { content: ""; width: 2px; height: 15rem; background: red; position: absolute; right: -15rem; top: 2.5rem; }
+
+.site-footer { background: #e5191e; }
+.site-footer .region { max-width: 1170px; margin: 0 auto; display: block; }
+.site-footer .field { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: justify; justify-content: space-between; padding: 20px 0; }
+.site-footer .field p { color: #ffffff; margin-bottom: 0; }
