--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5590,7 +5590,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; }
 .navbar-collapse ul li.nav-item a:hover { border-bottom: 2px solid #e5191e; }
 
-#header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; background: #000000; padding: 2px 0; }
+#header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; background: #000000; background: #000000 url(../images/HomePageBGReadShape_PNG.png); background-position: right -39px; background-size: 30%; background-repeat: no-repeat; padding: 2px 0; }
 #header img { width: 10rem; }
 
 .featured-bottom { background: #000000; }
@@ -5607,3 +5607,6 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .site-footer .field { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 20px 0; }
 .site-footer .field p { color: #ffffff; margin-bottom: 0; }
 .site-footer--img { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
+
+#block-homepage { background: #000000 url(../images/HomePageBGReadShape_PNG.png); background-size: cover; background-position: right -12.5rem; background-size: 30%; background-repeat: no-repeat; padding: 4rem 0; }
+#block-homepage p { width: 20%; color: #ffffff; }
