--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5566,7 +5566,7 @@ a.text-dark:hover, a.text-dark:focus { color: #121416 !important; }
 /*------- Golbal -----------*/
 html { box-sizing: border-box; font-size: 62.5%; /* 10px/16px = 62.5% ~> 1rem = 10px */ /* global font-size */ }
 
-body { font-family: "Ubuntu-Light", "Pyidaungsu-Regular", "Arial", sans-serif; font-size: 1.4rem; color: #070712; line-height: 23px; letter-spacing: 0.5px; background: url("../images/HomePageBGReadShape.svg"); }
+body { font-family: "Ubuntu-Light", "Pyidaungsu-Regular", "Arial", sans-serif; font-size: 1.4rem; color: #070712; line-height: 23px; letter-spacing: 0.5px; background: #000000 url("../images/HomePageBGReadShape_PNG.png"); background-repeat: no-repeat; background-size: 30%; background-position: right 4.5rem; }
 body h1, body h2, body h3 { font-family: "Philosopher-Regular", "Pyidaungsu-Regular", "Arial", sans-serif; }
 body h1 { font-size: 4.4rem; line-height: 4.9rem; }
 body h2 { color: #ffffff; font-size: 3.5rem; line-height: 39px; }
@@ -5590,7 +5590,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; }
 .navbar-collapse ul li.nav-item a:hover { border-bottom: 2px solid #e5191e; }
 
-#header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; background: #000000; background: #000000 url(../images/HomePageBGReadShape_PNG.png); background-position: right -39px; background-size: 30%; background-repeat: no-repeat; padding: 2px 0; }
+#header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 2px 0; }
 #header img { width: 10rem; }
 
 .featured-bottom { background: #000000; }
@@ -5608,5 +5608,6 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .site-footer .field p { color: #ffffff; margin-bottom: 0; }
 .site-footer--img { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
 
-#block-homepage { background: #000000 url(../images/HomePageBGReadShape_PNG.png); background-size: cover; background-position: right -12.5rem; background-size: 30%; background-repeat: no-repeat; padding: 4rem 0; }
+#block-homepage .field { max-width: 1170px; margin: 0 auto; }
 #block-homepage p { width: 20%; color: #ffffff; }
+#block-homepage h2 { font-size: 4.4rem; }
