--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -70,7 +70,7 @@
 <div id="page-wrapper">
   <div id="page">
   {% if page.top_header %}
-      <div class="highlighted">
+      <div class="top-header">
         <aside class="{{ container }} section clearfix" role="complementary">
           {{ page.top_header }}
         </aside>
