--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5615,12 +5615,12 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .site-footer--img { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
 
 #block-homepage h1 { margin-bottom: 0; text-transform: uppercase; }
-#block-homepage p { width: 20%; color: #ffffff; }
+#block-homepage p { font-family: "Ubuntu-Light", "Pyidaungsu-Regular", "Arial", sans-serif; width: 20%; color: #ffffff; }
 #block-homepage p::before { content: "\f10d"; }
-#block-homepage p::after { content: "\f10e"; }
+#block-homepage p::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f10e"; }
 
 #block-wepassionate h2 { color: #e5191e; }
-#block-wepassionate p { color: #ffffff; transition: all .5s; }
+#block-wepassionate p { color: #ffffff; transition: all .5s; cursor: pointer; }
 #block-wepassionate p:hover { color: #e5191e; }
 
 .create-wrap { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
