--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5616,8 +5616,9 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 
 #block-homepage h1 { margin-bottom: 0; text-transform: uppercase; }
 #block-homepage p { font-family: "Ubuntu-Light", "Pyidaungsu-Regular", "Arial", sans-serif; width: 20%; color: #ffffff; }
-#block-homepage p::before { content: "\f10d"; }
+#block-homepage p::before { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f10d"; }
 #block-homepage p::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f10e"; }
+#block-homepage svg { display: none; }
 
 #block-wepassionate h2 { color: #e5191e; }
 #block-wepassionate p { color: #ffffff; transition: all .5s; cursor: pointer; }
@@ -5625,3 +5626,9 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 
 .create-wrap { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
 .create-left { margin-right: 5rem; }
+
+#block-services .services-wrap div:not(:last-child) { margin-right: 10rem; position: relative; }
+#block-services .services-wrap div:not(:last-child)::after { content: ""; width: 1px; height: 12rem; background: #e5191e; position: absolute; right: -44px; top: 19px; }
+#block-services h2 { color: #e5191e; }
+#block-services p { color: #ffffff; transition: all .5s; }
+#block-services p:hover { color: #e5191e; }
