--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5631,5 +5631,5 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 #block-services .services-wrap div:not(:last-child) { margin-right: 10rem; position: relative; }
 #block-services .services-wrap div:not(:last-child)::after { content: ""; width: 1px; height: 12rem; background: #e5191e; position: absolute; right: -44px; top: 19px; }
 #block-services h2 { color: #e5191e; }
-#block-services p { color: #ffffff; transition: all .5s; }
+#block-services p { color: #ffffff; transition: all .5s; text-transform: capitalize; cursor: pointer; }
 #block-services p:hover { color: #e5191e; }
