--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5591,8 +5591,9 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .top-header .region { display: block; }
 
 .navbar { padding: 0; }
-.navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; }
-.navbar-collapse ul li.nav-item a:hover { border-bottom: 2px solid #e5191e; }
+.navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; position: relative; }
+.navbar-collapse ul li.nav-item a::after { content: ""; background: #e5191e; width: 100%; height: 2px; position: absolute; bottom: 0; left: 0; opacity: 0; }
+.navbar-collapse ul li.nav-item a:hover::after { opacity: 1; }
 
 #header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 2px 0; }
 #header img { width: 10rem; }
@@ -5612,12 +5613,14 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .site-footer .field p { color: #ffffff; margin-bottom: 0; }
 .site-footer--img { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
 
+#block-homepage { max-width: 1170px; margin: 0 auto; }
 #block-homepage h1 { margin-bottom: 0; text-transform: uppercase; }
 #block-homepage p { font-family: "Ubuntu-Light", "Pyidaungsu-Regular", "Arial", sans-serif; width: 20%; color: #ffffff; }
 #block-homepage p::before { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f10d"; }
 #block-homepage p::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f10e"; }
 #block-homepage svg { display: none; }
 
+#block-wepassionate { max-width: 1170px; margin: 0 auto; }
 #block-wepassionate h2 { color: #e5191e; }
 #block-wepassionate p { color: #ffffff; transition: all .5s; cursor: pointer; }
 #block-wepassionate p:hover { color: #e5191e; }
