--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5592,7 +5592,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 
 .navbar { padding: 0; }
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; position: relative; }
-.navbar-collapse ul li.nav-item a::after { content: ""; background: #e5191e; width: 100%; height: 2px; position: absolute; bottom: 0; left: 0; opacity: 0; }
+.navbar-collapse ul li.nav-item a.is-active .navbar-collapse ul li.nav-item a::after { content: ""; background: #e5191e; width: 100%; height: 2px; position: absolute; bottom: 0; left: 0; opacity: 0; }
 .navbar-collapse ul li.nav-item a:hover::after { opacity: 1; }
 
 #header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 2px 0; }
@@ -5608,6 +5608,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .contact-us::after { content: ""; width: 2px; height: 15rem; background: red; position: absolute; right: -15rem; top: 2.5rem; }
 
 .site-footer { background: #e5191e; }
+.site-footer .region { display: block; }
 .site-footer .field { padding: 15px 20px; }
 .site-footer .field p { color: #ffffff; margin-bottom: 0; }
 .site-footer--text, .site-footer--img { display: inline-block; vertical-align: middle; }
