--- a/css/me-creative.css
+++ b/css/me-creative.css
@@ -5592,7 +5592,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 
 .navbar { padding: 0; }
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; position: relative; }
-.navbar-collapse ul li.nav-item a.is-active .navbar-collapse ul li.nav-item a::after { content: ""; background: #e5191e; width: 100%; height: 2px; position: absolute; bottom: 0; left: 0; opacity: 0; }
+.navbar-collapse ul li.nav-item a::after { content: ""; background: #e5191e; width: 100%; height: 2px; position: absolute; bottom: 0; left: 0; opacity: 0; }
 .navbar-collapse ul li.nav-item a:hover::after { opacity: 1; }
 
 #header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 2px 0; }
