--- a/scss/me-creative.scss
+++ b/scss/me-creative.scss
@@ -78,15 +78,15 @@ div#block-inspiral-theme-page-title { @include d-none; }
             padding: 3rem !important;
             font-size: 1.9rem;
             position: relative;
-            &.is-active::before {
-                content: "";
-                background: $secondary-color;
-                width: $one-column-width;
-                height: 2px;
-                position: absolute;
-                bottom: 0;
-                left: 0;
-            }
+            // &.is-active::before {
+            //     content: "";
+            //     background: $secondary-color;
+            //     width: $one-column-width;
+            //     height: 2px;
+            //     position: absolute;
+            //     bottom: 0;
+            //     left: 0;
+            // }
             &::after {
                 content: "";
                 background: $secondary-color;
